Fix favorite system, media query to hide sidebar if screen is too small, farm.js improvements

--- a/css/dash.css
+++ b/css/dash.css
@@ -178,3 +178,9 @@ body {
   text-decoration: none;
   cursor: pointer;
 }
+
+@media (max-width: 1024px) {
+  .sidebar {
+    display: none;
+  }
+}
